# scraperFastChef

./: Add.hs  Application.hs  Foundation.hs  Home.hs  Main.hs  README.md  client_session_key.aes  projeto.cabal  routes
Handlers/: Busca.hs  Detalhe.hs  DetalheAllRecipes.hs  Jsonnaveia.hs  Sobre.hs  ViewDetails.hs
Handlers/Receitas/: Busca.hs  ViewAr.hs  ViewDetails.hs
Handlers/Usuarios/: Favoritos.hs  Login.hs  Register.hs
Scraper/: General.hs  Padrao.hs
Scraper/Busca/: AllRecipes.hs  CyberCook.hs  Receita.hs  ReceitasDeHoje.hs  ReceitasIg.hs  TudoGostoso.hs
Scraper/Search/: CyberCook.hs
Scraper/Services/: AllRecipes.hs  CyberCook.hs  Receita.hs  ReceitasDeHoje.hs  ReceitasIg.hs
Scraper/Ztestes/: Boott.hs  Scraper.hs  Secondtest.hs  Teste.hs  Viii.hs
Utils/: SettingsForm.hs  WidgetResultadoBusca.hs
Widgets/: PageGenericContent.hs  SettingsForm.hs  WidgetResultadoBusca.hs
static/css/: estilo.css
templates/: footer.hamlet  form.hamlet  menu.hamlet  resultadosDaBusca.hamlet
