name:               projeto
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          projeto
  main-is:          Main.hs
  other-modules:    Application
                    Foundation

                    Home
                    Handlers.Receitas.Busca
                    Handlers.Receitas.ViewDetails
                    Handlers.Usuarios.Favoritos
                    Handlers.Usuarios.Login
                    Handlers.Usuarios.Register
                    Widgets.WidgetResultadoBusca
                    Widgets.SettingsForm
                    Widgets.PageGenericContent
                    Scraper.General
                    Scraper.Services.Receita
                    Scraper.Services.AllRecipes
                    Scraper.Services.CyberCook
                    Scraper.Services.ReceitasDeHoje


  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod
                , yesod-core
                , yesod-static
                , wreq
                , aeson
                , lens-aeson
                , taggy-lens
                , lens >=4.0.1 && <4.16
                , taggy
                , text
                , bytestring
                , shakespeare
                , blaze-markup
                , blaze-html
                , xml-conduit
                , utf8-string
                , http-types
                , blaze-builder
                , yesod-form
                , transformers
                , unordered-containers
                , containers
                , vector >=0.11.0.0
                , path-pieces
                , utf8-string >=0.3.7
                , persistent >=2.6.1
                , persistent-postgresql
                , monad-logger
                , mime-mail >= 0.3

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
